--- a/css/styles.css
+++ b/css/styles.css
@@ -58,10 +58,12 @@
 }
 
 :root {
-  --color-brand-light: #819b57; /* HEX color value */ /* еще используется rgba где 4 парамента, последний прозрачность показівает 0/1. Используется на практике хекс и ргба */
-  --color-primary-white: #faf4ea;
+  --color-brand-normal: #819b57; /* HEX color value */ /* еще используется rgba где 4 парамента, последний прозрачность показівает 0/1. Используется на практике хекс и ргба */
+  --color-primary-light: #faf4ea;
   --color-primary-dark: #31261a;
   --color-brand-dark: #465929;
+  --color-brand-light: #cfcfbc;
+  --color-secondary-dark: #a18268;
 }
 address {
   font-style: normal;
@@ -74,6 +76,7 @@ address {
 
 body {
   color: var(--color-primary-dark);
+  background-color: var(--color-primary-light);
   font-family: "Poppins", sans-serif;
   font-size: 18px;
   font-weight: 400;
@@ -101,6 +104,8 @@ p {
 /* GLOBAL STYLES */
 ul {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .hidden {
@@ -121,10 +126,10 @@ ul {
 /* LINK  */
 .button {
   padding: 16px 32px;
-  color: var(--color-primary-white);
+  color: var(--color-primary-light);
   font-weight: 600;
-  background-color: var(--color-brand-light);
-  border: 2px solid var(--color-brand-light);
+  background-color: var(--color-brand-normal);
+  border: 2px solid var(--color-brand-normal);
   border-radius: 8px;
   cursor: pointer;
 }
@@ -135,23 +140,46 @@ ul {
 }
 
 .link {
-  color: var(--color-primary-white);
+  color: var(--color-primary-light);
   text-decoration: none;
   line-height: 1.5;
 }
 .link:hover {
-  color: var(--color-brand-light);
-  font-weight: 600;
+  color: var(--color-brand-normal);
 }
 
+/* Header */
+.header-container {
+  background-color: gainsboro;
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+.header-nav {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  gap: 40px;
+}
+.header-menu {
+  display: flex;
+  gap: 64px;
+  flex-grow: 1;
+  justify-content: center;
+}
 /* HERO SECTION */
 .hero-section {
   padding: 272px 0px;
+  background-image: url("../Images/hero-section-background.jpg");
+  background-repeat: no-repeat;
+  background-position: center top; /*смещение по x и y*/
+  background-size: cover; /*по x и y. Для фоток используется редко. В основном ставим Cover*/
+  background-attachment: fixed;
 }
 
 .hero-title {
   margin-bottom: 0px;
-  color: var(--color-primary-white);
+  color: var(--color-primary-light);
   text-decoration: none;
   text-align: center; /* заголовок будет по центру слева или справа */
   font-size: 128px;
@@ -163,16 +191,21 @@ ul {
 }
 
 .hero-title .accent {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
 }
 
 /* advantages section */
+.adventages-section {
+  background-color: var(--color-brand-normal);
+}
 .advantages-list {
-  color: var(--color-primary-white);
-  background-color: var(--color-brand-light);
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
 }
 
 .adventages-item {
+  color: var(--color-primary-light);
   font-size: 20px;
   font-weight: 300;
 }
@@ -181,6 +214,9 @@ ul {
   font-size: 64px;
   font-weight: 900;
   line-height: 1.3;
+}
+.section-title.centered {
+  text-align: center;
 }
 
 .section-title .accent {
@@ -191,23 +227,48 @@ ul {
 .traditions-section {
   padding-top: 96px;
 }
+.traditions-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
 .traditions-title {
   margin-bottom: 42px;
+}
+.traditions-content {
+  max-width: 710px;
 }
 
 /* white-space: nowrap;  помешает текст в один рядок без пепреносов*/
 .traditions-text .brand {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
   font-weight: 600;
 }
 
 .traditions-text .uppercase {
   text-transform: uppercase;
 }
+.traditions-text.limited {
+  max-width: 335px;
+}
 
 /* chefs Section*/
 .chefs-title {
-  margin-bottom: 80px;
+  max-width: 520px;
+  margin: 0 auto 80px;
+}
+.chef-image {
+  border-radius: 4px 4px 4px 200px;
+  box-shadow: -16px 16px 0 0 var(--color-primary-light),
+    -16px 16px 0 2px var(--color-secondary-dark);
+}
+
+.chefs-title::before,
+.chefs-title::after {
+  display: block;
+  width: 352px;
+  border: 2px solid var(--color-brand-light);
+  content: "";
 }
 
 .chef-title {
@@ -217,6 +278,29 @@ ul {
 }
 
 /* Format Section */
+.formats-list {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+.formats-item {
+  flex-basis: calc((100% - 40px) / 3);
+  /*Прописываем, чтобы поместить 3 карточки в ряд. Было бы 4 писали бы 4*/
+  /*Отнимаем 40рх от общей ширины так как тут Gap 20px на 2 єлемента*/
+}
+
+.format-card {
+  height: 444px;
+  background-image: linear-gradient(
+    180deg,
+    rgba(49, 38, 26, 0) 55.21%,
+    rgba(49, 38, 26, 0.71) 72.92%,
+    var(--color-primary-dark) 100%
+  );
+  padding: 24px;
+  border: 1px, solid lightgray; /*Need to remove*/
+  border-radius: 16px;
+}
 .formats-title {
   margin-bottom: 80px;
 }
@@ -228,6 +312,25 @@ ul {
   font-weight: 300;
   font-size: 14px;
 }
+/* Carousel button */
+.carousel-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  padding: 0;
+  background-color: transparent;
+  fill: var(--color-primary-dark);
+  /* Бордер-радиус 50% означает, что елемент польностью округлится */
+  border-radius: 50%;
+  border: 1px solid var(--color-primary-dark);
+  cursor: pointer;
+}
+.carousel-button:hover {
+  background-color: var(--color-primary-dark);
+  fill: var(--color-primary-light);
+}
 
 /* Contact Section */
 .contact-title {
@@ -236,17 +339,40 @@ ul {
 /* ADdress */
 
 .address-link {
-  color: var(--color-primary-white);
+  color: var(--color-primary-light);
   font-size: 16px;
   font-weight: 300;
   text-decoration: none; /* Убирает подчеркивания например на ссілках*/
 }
 
 .address-link:hover {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
+}
+.address-icon {
+  /* Используем фил чтобы заполнить цвет иконки */
+  fill: var(--color-primary-light);
+}
+.address-icon:hover {
+  fill: var(--color-brand-normal);
 }
 
 .address-copyright {
   font-size: 14px;
   color: #a18268;
+}
+
+.footer {
+  background-image: url("../Images/footer-background.png"); /*в .png прозрачный фон*/
+  background-color: var(--color-primary-dark);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.test-box {
+  width: 300px;
+  height: 400px;
+  border: 1px solid black;
+  margin: 10px auto;
+  background-image: radial-gradient(yellow, blue);
 }
