--- a/css/styles.css
+++ b/css/styles.css
@@ -149,14 +149,21 @@ ul {
   color: var(--color-primary-light);
   text-decoration: none;
   line-height: 1.5;
+  transition: color 0.3s;
 }
 .link:hover {
   color: var(--color-brand-normal);
 }
 
 /* Header */
+.header {
+  padding-top: 32px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
 .header-container {
-  background-color: gainsboro;
   display: flex;
   align-items: center;
   gap: 40px;
@@ -176,7 +183,13 @@ ul {
 /* HERO SECTION */
 .hero-section {
   padding: 272px 0px;
-  background-image: url("../Images/hero-section-background.jpg");
+  background-image: linear-gradient(
+      102.76deg,
+      rgba(18, 18, 17, 0.78) 2.03%,
+      rgba(18, 18, 17, 0.6) 58.46%,
+      rgba(18, 18, 17, 0) 90.36%
+    ),
+    url("../Images/hero-section-background.jpg");
   background-repeat: no-repeat;
   background-position: center top; /*смещение по x и y*/
   background-size: cover; /*по x и y. Для фоток используется редко. В основном ставим Cover*/
@@ -261,16 +274,23 @@ ul {
 /* chefs Section*/
 
 .chefs-title {
-  max-width: 520px;
+  position: relative;
   margin: 0 auto 80px;
 }
 
 .chefs-title::before,
 .chefs-title::after {
-  display: block;
+  position: absolute;
+  bottom: 24px;
   width: 352px;
   border: 2px solid var(--color-brand-light);
   content: "";
+}
+.chefs-title::before {
+  left: -0;
+}
+.chefs-title::after {
+  right: 0;
 }
 
 .chefs-list {
@@ -337,6 +357,10 @@ ul {
   padding: 24px;
   border: 1px, solid lightgray; /*Need to remove*/
   border-radius: 16px;
+  transition: transform 0.3s;
+}
+.format-card:hover {
+  transform: scale(1.05);
 }
 .formats-title {
   margin-bottom: 80px;
@@ -369,6 +393,9 @@ ul {
 .carousel-button:hover {
   background-color: var(--color-primary-dark);
   fill: var(--color-primary-light);
+}
+.carousel-button.next {
+  transform: rotate(180deg);
 }
 
 /* Contact Section */
@@ -417,7 +444,35 @@ ul {
 /* Footer */
 .footer {
   padding: 32px 0;
+  position: relative;
+  background-image: url("../Images/footer-background.png"); /*в .png прозрачный фон*/
+  background-color: var(--color-primary-dark);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
+.footer::before,
+.footer::after {
+  position: absolute;
+  bottom: 0;
+  background-repeat: no-repeat;
+  content: "";
+}
+
+.footer::before {
+  width: 180px;
+  height: 120px;
+  left: 0;
+  background-image: url("../Images/decor-bread-small.png");
+}
+
+.footer::after {
+  width: 380px;
+  height: 190px;
+  right: 0;
+  background-image: url("../Images/decor-bread-large.png");
+}
+
 .footer-container {
   display: flex;
   gap: 20px;
@@ -439,18 +494,46 @@ ul {
   flex-grow: 1;
 }
 
-.footer {
-  background-image: url("../Images/footer-background.png"); /*в .png прозрачный фон*/
-  background-color: var(--color-primary-dark);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
 .test-box {
   width: 300px;
   height: 400px;
   border: 1px solid black;
   margin: 10px auto;
   background-image: radial-gradient(yellow, blue);
+}
+.backdrop {
+  padding: 20px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.3s, visibility 0.3s;
+}
+.backdrop.is-hidden {
+  /* Прозрачность 0 */
+  opacity: 0;
+  /* Скрывает окно */
+  visibility: hidden;
+  /* Не обрабатывает клики по окну */
+  pointer-events: none;
+}
+.modal {
+  position: relative;
+  width: 100%;
+  max-width: 880px;
+  height: 100%;
+  max-height: 880px;
+  background-color: var(--color-brand-light);
+  border-radius: 32px;
+}
+
+.modal-btn-close {
+  position: absolute;
+  top: 40px;
+  right: 40px;
 }
