--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,102 +25,20 @@
 
 /* убираем кружочки и вообще перечисление для UL элементов всех */
 
-@font-face {
-  font-display: swap;
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 300;
-  src: url("../fonts/poppins-v21-latin-300.woff2") format("woff2");
-}
+@import "./utils/fonts";
 
-@font-face {
-  font-display: swap;
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/poppins-v21-latin-regular.woff2") format("woff2");
-}
+@import "./utils/variables";
 
-@font-face {
-  font-display: swap;
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 600;
-  src: url("../fonts/poppins-v21-latin-600.woff2") format("woff2");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 900;
-  src: url("../fonts/poppins-v21-latin-900.woff2") format("woff2");
-}
-
-:root {
-  --color-brand-normal: #819b57; /* HEX color value */ /* еще используется rgba где 4 парамента, последний прозрачность показівает 0/1. Используется на практике хекс и ргба */
-  --color-primary-light: #faf4ea;
-  --color-primary-dark: #31261a;
-  --color-brand-dark: #465929;
-  --color-brand-light: #cfcfbc;
-  --color-secondary-dark: #a18268;
-}
 address {
   font-style: normal;
 }
 
 /* Base */
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
-}
+@import "./base";
+@import "./utils/utils";
 
-body {
-  color: var(--color-primary-dark);
-  background-color: var(--color-primary-light);
-  font-family: "Poppins", sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  /*Задаем коэфициентом, а не пикселями. Тоесть тут мы поделили 27рх на 18рх размер шрифта и получили 1.5. Задали в боди потому что это доминантное значение на страничке */
-  line-height: 1.5;
-  /* background-color: darkgray; */
-  margin: 0px;
-}
-
-/*Браузер автоматически добавляет марджины и мы их с помощью этого убираем
-Почему только топ? Потому что это как паттерн и иногда нам нужен автоматический bottom*/
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin-top: 0;
-}
-/* Задаем для всех ссылок чтобы кликабельная зона элемента 
-была равна элементу на котором располагается */
-a {
-  display: inline-block;
-}
 .section {
-  padding: 48px 0px;
-}
-/* GLOBAL STYLES */
-ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.hidden {
-  position: absolute;
-  left: -10000px;
-  top: auto;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
+  padding: 48px 0;
 }
 
 .container {
@@ -129,90 +47,16 @@ ul {
   margin: 0 auto;
   padding: 24px;
 }
+
+@import "./components/buttons";
+
 /* LINK  */
-.button {
-  padding: 16px 32px;
-  color: var(--color-primary-light);
-  font-weight: 600;
-  background-color: var(--color-brand-normal);
-  border: 2px solid var(--color-brand-normal);
-  border-radius: 8px;
-  cursor: pointer;
-}
-
-.button:hover {
-  background-color: transparent;
-  color: var(--color-brand-dark);
-}
-
-.link {
-  color: var(--color-primary-light);
-  text-decoration: none;
-  line-height: 1.5;
-  transition: color 0.3s;
-}
-.link:hover {
-  color: var(--color-brand-normal);
-}
+@import "./components/links";
 
 /* Header */
-.header {
-  padding-top: 32px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-.header-container {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
-.header-nav {
-  display: flex;
-  align-items: center;
-  flex-grow: 1;
-  gap: 40px;
-}
-.header-menu {
-  display: flex;
-  gap: 64px;
-  flex-grow: 1;
-  justify-content: center;
-}
+@import "./components/header";
 /* HERO SECTION */
-.hero-section {
-  padding: 272px 0px;
-  background-image: linear-gradient(
-      102.76deg,
-      rgba(18, 18, 17, 0.78) 2.03%,
-      rgba(18, 18, 17, 0.6) 58.46%,
-      rgba(18, 18, 17, 0) 90.36%
-    ),
-    url("../Images/hero-section-background.jpg");
-  background-repeat: no-repeat;
-  background-position: center top; /*смещение по x и y*/
-  background-size: cover; /*по x и y. Для фоток используется редко. В основном ставим Cover*/
-  background-attachment: fixed;
-}
-
-.hero-title {
-  margin-bottom: 0px;
-  color: var(--color-primary-light);
-  text-decoration: none;
-  text-align: center; /* заголовок будет по центру слева или справа */
-  font-size: 128px;
-  font-weight: 900;
-  /* text-transform: uppercase; Разный регистр. lowercase , capitalize - каждое слово с большой буквы */
-  /* text-shadow: 2px 2px 0px violet;   добавляет размытость тексту x,y,размытость, цвет */
-  /* letter-spacing: 0px;  расстояние между буквами*/
-  /* word-spacing: -10px; расстояние между словами */
-}
-
-.hero-title .accent {
-  color: var(--color-brand-normal);
-}
-
+@import "./components/hero-section";
 /* advantages section */
 .adventages-section {
   background-color: var(--color-brand-normal);
