added imgs to formats

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -191,6 +191,10 @@ address {
 }
 
 .format-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
   height: 444px;
   background-image: linear-gradient(
     180deg,
@@ -206,16 +210,27 @@ address {
 .format-card:hover {
   transform: scale(1.05);
 }
+.format-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
 .formats-title {
   margin-bottom: 80px;
 }
 .format-title {
   font-weight: 600;
   font-size: 24px;
+  color: var(--color-primary-light);
 }
 .format-text {
   font-weight: 300;
   font-size: 14px;
+  color: var(--color-primary-light);
 }
 /* Carousel button */
 .carousel-button {
