--- a/css/main.css
+++ b/css/main.css
@@ -355,6 +355,10 @@ ul {
 }
 
 .format-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
   height: 444px;
   background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primary-dark) 100%);
   padding: 24px;
@@ -367,6 +371,15 @@ ul {
   transform: scale(1.05);
 }
 
+.format-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
 .formats-title {
   margin-bottom: 80px;
 }
@@ -374,11 +387,13 @@ ul {
 .format-title {
   font-weight: 600;
   font-size: 24px;
+  color: var(--color-primary-light);
 }
 
 .format-text {
   font-weight: 300;
   font-size: 14px;
+  color: var(--color-primary-light);
 }
 
 /* Carousel button */
