--- a/css/main.css
+++ b/css/main.css
@@ -56,10 +56,6 @@
   --color-secondary-dark: #a18268;
 }
 
-address {
-  font-style: normal;
-}
-
 /* Base */
 /* Base */
 *,
@@ -109,6 +105,10 @@ ul {
   margin: 0;
 }
 
+address {
+  font-style: normal;
+}
+
 .hidden {
   position: absolute;
   left: -10000px;
@@ -116,10 +116,6 @@ ul {
   width: 1px;
   height: 1px;
   overflow: hidden;
-}
-
-.section {
-  padding: 48px 0;
 }
 
 .container {
@@ -227,6 +223,10 @@ ul {
   color: var(--color-primary-light);
   font-size: 20px;
   font-weight: 300;
+}
+
+.section {
+  padding: 48px 0;
 }
 
 .section-title {
@@ -354,6 +354,10 @@ ul {
   /*Отнимаем 40рх от общей ширины так как тут Gap 20px на 2 єлемента*/
 }
 
+.formats-title {
+  margin-bottom: 80px;
+}
+
 .format-card {
   position: relative;
   display: flex;
@@ -378,10 +382,6 @@ ul {
   width: 100%;
   height: 100%;
   z-index: -1;
-}
-
-.formats-title {
-  margin-bottom: 80px;
 }
 
 .format-title {
@@ -443,7 +443,7 @@ ul {
   border: none;
 }
 
-/* Address */
+/* Footer / Address */
 .address-link {
   color: var(--color-primary-light);
   font-size: 16px;
@@ -469,7 +469,6 @@ ul {
   color: #a18268;
 }
 
-/* Footer */
 .footer {
   padding: 32px 0;
   position: relative;
@@ -522,14 +521,6 @@ ul {
 .address-list,
 .address-info {
   flex-grow: 1;
-}
-
-.test-box {
-  width: 300px;
-  height: 400px;
-  border: 1px solid black;
-  margin: 10px auto;
-  background-image: radial-gradient(yellow, blue);
 }
 
 .backdrop {
